fix: joinme cross proxy